Archive2/db/0def671e195927/output
main.cpp: In function 'int main()':
main.cpp:34:38: error: 'external_request_to_quit' was not declared in this scope
         if( external_request_to_quit() )
                                      ^
